--- a/styles/navigation.scss
+++ b/styles/navigation.scss
@@ -2,6 +2,13 @@
 .header {
     display: flex;
     height: 50px;
-    padding: 5px;
+    width: 100vw;
+    padding: 5px 0px 5px 48px;
     position: fixed;
+    z-index: 3;
+    background-color: $background-white;
+}
+
+.navigation {
+    margin-left: 25px;
 }
