--- a/styles/page.scss
+++ b/styles/page.scss
@@ -1,8 +1,7 @@
 .page {
-    height: 100vh;
-    overflow: hidden;
+    position: relative;
+    min-height: 100vh;
+    max-width: 1440px;
     display: flex;
     flex-direction: column;
-    position: relative;
-    overflow: scroll;
 }
