--- a/styles/timescale.scss
+++ b/styles/timescale.scss
@@ -3,6 +3,7 @@
     width: 48px;
     height: 60px;
     position: relative;
+    z-index: 0;
     &__time {
         position: absolute;
         left: 12px;
