--- a/styles.css
+++ b/styles.css
@@ -1,31 +1,77 @@
-.page {
+* {
+    box-sizing: border-box;
+}
+
+body {
     font-family: Arial, Helvetica, sans-serif;
-    display: flex;
-    font-size: 32px;
-    height: 100vh;
-    width: 100vw;
 }
 
-.counter {
-    margin: auto;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.counter__button {
-    width: 48px;
-    height: 48px;
-    border: 2px solid grey;
-    border-radius: 4px;
-    background-color: transparent;
-    font-weight: 700;
+.title {
     font-size: 24px;
-    cursor: pointer;
-    outline: none;
+    text-transform: uppercase;
+    text-align: center;
 }
 
-.counter__value {
-    width: 16px;
-    margin: 0 10px;
+.todo-list {
+    display: flex;
+    flex-direction: column;
+    margin-top: 32px;
+    background-color: coral;
+    border-radius: 8px;
+    padding: 8px;
+    max-width: 600px;
+    margin: auto;
+}
+
+.list {
+    margin: 0;
+    padding: 0;
+    list-style-type: none;
+    margin: auto;
+    width: 100%;
+}
+
+.list__item {
+    display: flex;
+    align-items: center;
+    height: 40px;
+    border-radius: 8px;
+    background-color: wheat;
+    margin-bottom: 8px;
+    padding: 8px;
+}
+
+.list__item_done {
+    text-decoration: line-through;
+    opacity: 0.7;
+}
+
+.list__item:last-child {
+    margin-bottom: 0;
+}
+
+.list__item-checkbox {
+    margin-right: 8px;
+}
+
+.btn {
+    height: 32px;
+    min-width: 64px;
+    border: 3px solid #ccc;
+    outline: none;
+    cursor: pointer;
+    border-radius: 8px;
+    margin-left: 16px;
+}
+
+.actions {
+    display: flex;
+    margin-bottom: 8px;
+}
+
+.task-input {
+    height: 32px;
+    border: 3px solid #ccc;
+    border-radius: 8px;
+    flex: 1;
 }
